shelf: Drag home launcher from auto-hide shelf.

SetUpWindows in HomeLauncherGestureHandler::OnPressEvent could cause
window stacking change when more than one window are opened. This might
hide the auto-hide shelf when start drag the home launcher from it,
which means the following gesture events won't be dispatched to the
shelf then to HomeLancherGestureHandler to continue the drag.
This cl fixed the issue by making sure the auto-hide shelf is visible
once start dragging the home launcher from it.

Bug: 915833
Change-Id: Ib47cacd12656ca43dfa006edec19b164ac2f4b88
Reviewed-on: https://chromium-review.googlesource.com/c/1380594
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Min Chen <minch@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617617}
Former-commit-id: ddacdceff49bbc94e703f270a6751e03db8b0a79